tests/fail/destruct_named_not_struct_fail.tk
shape Pair(
    A | B
)

fn main() -> i32 {
    auto p = Pair::A()
    // Named destructuring on a Tagged Enum (illegal!)
    auto Pair(x = a, y = b) = p
    return 0
}
