tests/fail/destruct_named_not_struct_fail.stderr
error[E0421]: Member access 'destructuring' on non-shape type 'Pair'
 --> tests/fail/destruct_named_not_struct_fail.tk:8:31
  |
 8 |     auto Pair(x = a, y = b) = p
  |                               ^

